--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,10 +1,10 @@
 {
     "E-Mail Address": "Correo electrónico",
     "Password": "Contraseña",
-    "Remember Me": "Recuérdame",
+    "Remember me": "Recuérdame",
     "Log in": "Iniciar sesión",
     "Register": "Registro",
-    "Forgot Your Password?": "¿Olvidaste tu contraseña?",
+    "Forgot your password?": "¿Olvidaste tu contraseña?",
     "Name": "Nombre",
     "Confirm Password": "Confirmar contraseña",
     "Reset Password": "Restablecer contraseña",
@@ -30,15 +30,42 @@
     "If you did not receive the email": "Si no has recibido el email",
     "click here to request another": "pulsa aquí para que te enviemos otro",
     "All rights reserved.":  "Todos los derechos reservados.",
-    "Already registered?" : "Ya estas registrado?",
+    "Already registered?" : "Ya tienes una cuenta?",
     "The field :attribute is required" : "El campo :attribute es obligatorio",
     "Spanish" : "Español",
     "English" : "Ingles",
     "Ukraine" : "Ukraniano",
     "French" : "Franses",
-    "The drink that refreshes the entire world | Coca-Cola" : "La bebida que refresca al mundo entero | Coca-Cola",
     "Top page" : "Página Principal",
     "Products" : "Productos",
     "Shop" : "Tienda",
-    "Customer service" : "Servicio al cliente"
+    "Customer service" : "Servicio al cliente",
+    "We are a company dedicated to the sale of different drinks from all over the world, we help companies sell their products so that our customers can try new and tasty drinks." : "Somos una empresa dedicada a la venta de diferentes bebidas de todo el mundo, ayudamos a las empresas a que vendan sus productos para que nuestros clientes puedan probar bebidas nuevas y sabrosas. ",
+    "Update with new drinks" : "Actualizate con nuevas bebidas",
+    "About us" : "Sobre nosotros",
+    "Contact" : "Contactos",
+    "Follow us" : "Siguenos en nuesntras redes",
+    "Home store" : "Inicio de la tienda",
+    "All brands" : "Todas las marcas",
+    "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one." : "¿Olvidaste tu contraseña? No hay problema. Simplemente digita tu dirección de correo electrónico y le enviaremos un enlace para restablecer su contraseña que le permitirá elegir una nueva.",
+    "Email Password Reset Link" : "Restablecer contraseña",
+    "You do not have an account?" : "No tienes una cuenta?",
+    "Add to cart" : "Agregar al carrito",
+    "Shop Postobon" : "Tienda Postobon",
+    "Shop Red Bull" : "Tienda Red Bull",
+    "Your cart is empty 😭" : "Tu carrito esta vacío 😭",
+    "Your shopping cart" : "Tu carrito de compras",
+    "Available Stock: " : "Stock disponible: ",
+    "Update Quantity" : "Actualizar Cantidad",
+    "Remove" : "Eliminar",
+    "Quantity: " : "Cantidad: ",
+    "You shopping cart" : "Tu carrito",
+    "Checkout" : "Comprar",
+    "Product(s) in cart" : "Productos en el carrito",
+    "No Product(s) In Your Cart 🫣" : "No hay productos en tu carrito 🫣",
+    "Continue in store" : "Continuar en la tienda",
+    "Price: " : "Precio: ",
+    "Delete entire cart" : "Eliminar todo el carrito",
+    "Proceed to Checkout" : "Proceder al pago"
+
 }
