--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -840,9 +840,33 @@
     "English" : "Anglais",
     "Ukraine" : "Ukraine",
     "French" : "Français",
-    "The drink that refreshes the entire world | Coca-Cola" : "La boisson qui rafraîchit le monde entier | Coca-Cola",
     "Top page" : "Première page",
     "Products" : "Des produits",
     "Store" : "Magasin",
-    "Customer service" : "Service client"
+    "Customer service" : "Service client",
+    "All brands" : "Toutes les marques",
+    "We are a company dedicated to the sale of different drinks from all over the world, we help companies sell their products so that our customers can try new and tasty drinks." : "Nous sommes une entreprise dédiée à la vente de différentes boissons du monde entier, nous aidons les entreprises à vendre leurs produits afin que nos clients puissent essayer des boissons nouvelles et savoureuses.",
+    "Update with new drinks" : "Mise à jour avec de nouvelles boissons ",
+    "About us" : "À propos de nous",
+    "Contact" : "Contact",
+    "Follow us" : "Suivez-nous",
+    "You do not have an account?" : "Vous n'avez pas de compte?",
+    "Add to cart" : "Ajouter au panier",
+    "Shop Postobon" : "Boutique Postobon",
+    "Shop Red Bull" : "Boutique Red Bull",
+    "Shop" : "Boutique",
+    "Your cart is empty 😭" : "Votre panier est vide 😭",
+    "Your shopping cart" : "Votre Panier",
+    "Available Stock: " : "Stock disponible: ",
+    "Update Quantity" : "La quantité de mise à jour",
+    "Quantity: " : "Quantité: ",
+    "You shopping cart" : "Votre panier",
+    "Product(s) in cart" : "Produits dans le panier",
+    "No Product(s) In Your Cart 🫣" : "Aucun produit(s) dans votre panier 🫣",
+    "Continue in store" : "Continuer en magasin",
+    "Price: " : "Prix: ",
+    "Delete entire cart" : "Supprimer tout le panier",
+    "Proceed to Checkout" : "Passer à la caisse"
+
 }
+    
