--- a/resources/lang/uk.json
+++ b/resources/lang/uk.json
@@ -840,9 +840,33 @@
     "English" : "англійська",
     "Ukraine": "Україна",
     "French" : "Френ",
-    "The drink that refreshes the entire world | Coca-Cola" : "Напій, який освіжає весь світ | Кока-Кола",
     "Top page" : "Верхня сторінка",
     "Products" : "Продукти",
     "Store" : "Магазин",
-    "Customer service" : "Обслуговування клієнтів"
+    "Customer service" : "Обслуговування клієнтів",
+    "All brands" : "Всі бренди",
+    "We are a company dedicated to the sale of different drinks from all over the world, we help companies sell their products so that our customers can try new and tasty drinks." : "Ми є компанією, що займається продажем різних напоїв з усього світу, ми допомагаємо компаніям продавати їхню продукцію, щоб наші клієнти могли спробувати нові та смачні напої.",
+    "Update with new drinks" : "Оновлення новими напоями",
+    "About us" : "Про нас",
+    "Contact" : "контакт",
+    "Follow us" : "Слідуй за нами",
+    "You do not have an account?" : "У вас немає облікового запису",
+    "Add to cart" : "Додати в кошик",
+    "Shop Postobon" : "Магазин Postobon",
+    "Shop Red Bull" : "Магазин Red Bull",
+    "Shop" : "Магазин",
+    "Your cart is empty 😭" : "Ваш кошик порожній 😭",
+    "Your shopping cart" : "Ваш кошик для покупок",
+    "Available Stock: " : "Доступний запас: ",
+    "Update Quantity" : "Оновити кількість",
+    "Quantity: " : "Кількість: ",
+    "Total: " : "Всього: ",
+    "You shopping cart" : "Ваш кошик для покупок",
+    "Product(s) in cart" : "Продукти у кошику",
+    "No Product(s) In Your Cart 🫣" : "Немає продуктів у вашому кошику 🫣",
+    "Continue in store" : "Продовжити в магазині",
+    "Price: " : "Ціна: ",
+    "Delete entire cart" : "Видалити весь кошик",
+    "Proceed to Checkout" : "платити"
+    
 }
