Proyecto completado Fresh-Drink

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -6,6 +6,7 @@
     "Register": "Registro",
     "Forgot your password?": "¿Olvidaste tu contraseña?",
     "Name": "Nombre",
+    "Name:": "Nombre",
     "Confirm Password": "Confirmar contraseña",
     "Reset Password": "Restablecer contraseña",
     "Reset Password Notification": "Aviso para restablecer contraseña",
@@ -51,8 +52,11 @@
     "Email Password Reset Link" : "Restablecer contraseña",
     "You do not have an account?" : "No tienes una cuenta?",
     "Add to cart" : "Agregar al carrito",
+    "Shop Fresh-Drink 😍" : "Tienda Fresh-Drink 😍",
     "Shop Postobon" : "Tienda Postobon",
     "Shop Red Bull" : "Tienda Red Bull",
+    "Shop Pepsi" : "Tienda Pepsi",
+    "Shop Manantial" : "Tienda Manantial",
     "Your cart is empty 😭" : "Tu carrito esta vacío 😭",
     "Your shopping cart" : "Tu carrito de compras",
     "Available Stock: " : "Stock disponible: ",
@@ -66,6 +70,55 @@
     "Continue in store" : "Continuar en la tienda",
     "Price: " : "Precio: ",
     "Delete entire cart" : "Eliminar todo el carrito",
-    "Proceed to Checkout" : "Proceder al pago"
-
+    "Proceed to Checkout" : "Proceder al pago",
+    "You need to be logged in" : "Necesitas iniciar sesión",
+    "You need to be logged in to proceed to checkout." : "Debes iniciar sesión para proceder al pago.",
+    "Your profile" : "Tu perfil",
+    "Your orders" : "Tus pedidos",
+    "Spark your creativity. Discover our products in the store." : "Enciende tu creatividad. Descubre nuestros productos en la tienda.",
+    "Experience the magic of Red Bull energy." : "Experimenta la magia de la energía de Red Bull.",
+    "The best solutions for you." : "Las mejores soluciones para ti.",
+    "If you have any questions, complaints, or claims, please contact the following customer service lines:" : "Si tiene alguna pregunta, queja o reclamo, comuníquese con las siguientes líneas de atención al cliente:",
+    "Stay updated with new Fresh-Drink beverages 😍" : "Manténgase actualizado con nuevas bebidas Fresh-Drink 😍",
+    "Login or register" : "Iniciar sesión o registrarse",
+    "Your purchased products" : "Tus productos adquiridos",
+    "Products to purchase" : "Productos para comprar",
+    "Payment Gateway" : "Pasarela de pago",
+    "Purchase completed" : "Compra completada",
+    "Profile Information": "Información del perfil",
+    "Update your account's profile information and email address.": "Actualiza la información de perfil de tu cuenta y la dirección de correo electrónico.",
+    "Email": "Dirección de correo electrónico",
+    "Email:": "Dirección de correo electrónico",
+    "Save": "Actualizar",
+    "Update Password": "Actualizar Contraceña",
+    "Ensure your account is using a long, random password to stay secure.": "Asegúrese de que su cuenta utilice una contraseña larga y aleatoria para mantenerse segura.",
+    "Current Password": "Contraseña actual",
+    "New Password": "Nueva contraceña",
+    "Delete Account": "Eliminar Cuenta",
+    "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Una vez que se elimine su cuenta, todos sus recursos y datos se eliminarán permanentemente. Antes de eliminar su cuenta, pienselo bien antes de que se borre todo.",
+    "Thank you very much for choosing us 😊, we will keep you informed of any updates.": "Muchas gracias por elegirnos 😊, te mantendremos informado de cualquier actualización.",
+    "Click here to see all your purchased products": "Haga clic aquí para ver todos los productos adquiridos",
+    "Thank you very much for choosing in Fresh-Drink products 😊": "Muchas gracias por elegir los productos en Fresh-Drink 😊",
+    "These are the products to purchase": "Estos son los productos a adquirir",
+    "Click here to fill out the purchase form": "Haga clic aquí para completar el formulario de compra",
+    "Last name:": "Apellidos:",
+    "Cell number:": "Número de teléfono:",
+    "Address:": "Dirección:",
+    "Postal code:": "Código postal:",
+    "Country:": "País:",
+    "City:": "Ciudad:",
+    "Enter your full name": "Introduce tu nombre completo",
+    "Enter your last name": "Introduce tus apellidos",
+    "Enter your email address": "Introduce tu dirección de correo electrónico",
+    "Enter your phone number": "Introduce tu número telefónico",
+    "Enter your residential address": "Introduce tu dirección residencial",
+    "Enter your postal code": "Introduce tu código postal",
+    "Enter the country where you live": "Introduce el país donde vives",
+    "Enter the city where you live": "Introduce la ciudad donde vives",
+    "Submit and Save Data": "Enviar y Guardar Datos",
+    "These are the products you bought": "Estos son los productos que compraste",
+    "Purchases made on": "Compras realizadas el",
+    "Purchase status:": "Estado de la compra:",
+    "Purchased product:": "Producto comprado:"
+    
 }
