--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -418,6 +418,7 @@
     "Mozambique": "Mozambique",
     "Myanmar": "Myanmar",
     "Name": "Nom",
+    "Name:": "Nom",
     "Namibia": "Namibie",
     "Nauru": "Nauru",
     "Nepal": "Népal",
@@ -852,8 +853,11 @@
     "Follow us" : "Suivez-nous",
     "You do not have an account?" : "Vous n'avez pas de compte?",
     "Add to cart" : "Ajouter au panier",
+    "Shop Fresh-Drink 😍" : "Boutique Fresh-Drink 😍",
     "Shop Postobon" : "Boutique Postobon",
     "Shop Red Bull" : "Boutique Red Bull",
+    "Shop Pepsi" : "Boutique Pepsi",
+    "Shop Manantial" : "Boutique Manantial",
     "Shop" : "Boutique",
     "Your cart is empty 😭" : "Votre panier est vide 😭",
     "Your shopping cart" : "Votre Panier",
@@ -866,7 +870,44 @@
     "Continue in store" : "Continuer en magasin",
     "Price: " : "Prix: ",
     "Delete entire cart" : "Supprimer tout le panier",
-    "Proceed to Checkout" : "Passer à la caisse"
+    "Proceed to Checkout" : "Passer à la caisse",
+    "You need to be logged in to proceed to checkout." : "Vous devez être connecté pour procéder au paiement.",
+    "Your profile" : "Votre profil'",
+    "Your orders" : "Vos commandes",
+    "Spark your creativity. Discover our products in the store." : "Stimulez votre créativité. Découvrez nos produits en magasin.",
+    "Experience the magic of Red Bull energy." : "Découvrez la magie de l'énergie Red Bull.",
+    "The best solutions for you." : "Les meilleures solutions pour vous.",
+    "If you have any questions, complaints, or claims, please contact the following customer service lines:" : "Si vous avez des questions, des plaintes ou des réclamations, veuillez contacter les lignes de service client suivantes:",
+    "Stay updated with new Fresh-Drink beverages 😍" : "Restez à jour avec les nouvelles boissons Fresh-Drink 😍",
+    "Login or register" : "Connexion ou Inscription",
+    "Your purchased products" : "Vos produits achetés",
+    "Products to purchase" : "Produits à acheter",
+    "Payment Gateway" : "Passerelle de paiement",
+    "Purchase completed" : "Achat terminé",
+    "Thank you very much for choosing us 😊, we will keep you informed of any updates.": "Merci beaucoup de nous avoir choisi 😊, nous vous tiendrons informés de toute mise à jour.",
+    "Click here to see all your purchased products": "Cliquez ici pour voir tous vos produits achetés",
+    "Thank you very much for choosing in Fresh-Drink products 😊": "Merci beaucoup d'avoir choisi les produits Fresh-Drink 😊",
+    "These are the products to purchase": "Ce sont les produits à acheter",
+    "Click here to fill out the purchase form": "Cliquez ici pour remplir le formulaire d'achat",
+    "Last name:": "Nom de famille",
+    "Cell number:": "Numéro de téléphone:",
+    "Address:": "Adresse:",
+    "Postal code:": "Code Postal:",
+    "Country:": "Pays:",
+    "City:": "Ville:",
+    "Enter your full name": "Entrez votre nom complet",
+    "Enter your last name": "Entrez votre nom de famille",
+    "Enter your email address": "Entrez votre adresse email",
+    "Enter your phone number": "Entrez votre numéro de téléphone",
+    "Enter your residential address": "Entrez votre adresse résidentielle",
+    "Enter your postal code": "Entrez votre code postal",
+    "Enter the country where you live": "Entrez le pays où vous vivez",
+    "Enter the city where you live": "Entrez la ville où vous habitez",
+    "Submit and Save Data": "Soumettre et enregistrer des données",
+    "These are the products you bought": "Ce sont les produits que vous avez achetés",
+    "Purchases made on": "Les achats effectués sur",
+    "Purchase status:": "Statut d'achat:",
+    "Purchased product:": "Produit acheté:"
 
 }
     
