--- a/resources/lang/uk.json
+++ b/resources/lang/uk.json
@@ -418,6 +418,7 @@
     "Mozambique": "Мозамбік",
     "Myanmar": "М'янма",
     "Name": "Ім'я",
+    "Name:": "Ім'я",
     "Namibia": "Намібія",
     "Nauru": "Науру",
     "Nepal": "Непал",
@@ -852,8 +853,11 @@
     "Follow us" : "Слідуй за нами",
     "You do not have an account?" : "У вас немає облікового запису",
     "Add to cart" : "Додати в кошик",
+    "Shop Fresh-Drink 😍" : "Магазин Fresh-Drink 😍",
     "Shop Postobon" : "Магазин Postobon",
     "Shop Red Bull" : "Магазин Red Bull",
+    "Shop Pepsi" : "Магазин Pepsi",
+    "Shop Manantial" : "Магазин Manantial",
     "Shop" : "Магазин",
     "Your cart is empty 😭" : "Ваш кошик порожній 😭",
     "Your shopping cart" : "Ваш кошик для покупок",
@@ -867,6 +871,44 @@
     "Continue in store" : "Продовжити в магазині",
     "Price: " : "Ціна: ",
     "Delete entire cart" : "Видалити весь кошик",
-    "Proceed to Checkout" : "платити"
+    "Proceed to Checkout" : "платити",
+    "You need to be logged in": "Ви повинні увійти в систему",
+    "You need to be logged in to proceed to checkout." : "Ви повинні увійти в систему, щоб перейти до оплати.",
+    "Your profile" : "Твій профіль'",
+    "Your orders" : "Ваші замовлення",
+    "Spark your creativity. Discover our products in the store." : "Викликайте свою творчість. Відкрийте для себе наші продукти в магазині.",
+    "Experience the magic of Red Bull energy." : "Відчуйте магію енергії Red Bull.",
+    "The best solutions for you." : "Найкращі рішення для вас.",
+    "If you have any questions, complaints, or claims, please contact the following customer service lines:" : "Якщо у вас виникли запитання, скарги чи претензії, звертайтеся за такими лініями обслуговування клієнтів:",
+    "Stay updated with new Fresh-Drink beverages 😍" : "Будьте в курсі нових напоїв Fresh-Drink 😍",
+    "Login or register" : "Увійти або зареєструватися",
+    "Your purchased products" : "Ваші придбані продукти",
+    "Products to purchase" : "Продукти для покупки",
+    "Payment Gateway" : "Платіжний шлюз",
+    "Purchase completed" : "Покупку завершено",
+    "Thank you very much for choosing us 😊, we will keep you informed of any updates.": "Щиро дякуємо, що вибрали нас 😊, ми будемо інформувати вас про будь-які оновлення.",
+    "Click here to see all your purchased products": "Натисніть тут, щоб переглянути всі придбані продукти",
+    "Thank you very much for choosing in Fresh-Drink products 😊": "Щиро дякуємо за вибір продукції Fresh-Drink 😊",
+    "These are the products to purchase": "Це продукти для покупки",
+    "Click here to fill out the purchase form": "Натисніть тут, щоб заповнити форму покупки",
+    "Last name:": "Прізвище:",
+    "Cell number:": "Номер стільникового:",
+    "Address:": "Адреса:",
+    "Postal code:": "Поштовий індекс:",
+    "Country:": "Країна",
+    "City:": "Місто:",
+    "Enter your full name": "Введіть Ваше повне ім'я",
+    "Enter your last name": "Введіть своє прізвище",
+    "Enter your email address": "Введіть адресу вашої електронної пошти",
+    "Enter your phone number": "Введіть свій номер телефону",
+    "Enter your residential address": "Введіть адресу свого проживання",
+    "Enter your postal code": "Введіть свій поштовий індекс",
+    "Enter the country where you live": "Введіть країну, де ви проживаєте",
+    "Enter the city where you live": "Введіть місто, де ви живете",
+    "Submit and Save Data": "Надіслати та зберегти дані",
+    "These are the products you bought": "Це продукти, які ви купили",
+    "Purchases made on": "Покупки, зроблені на",
+    "Purchase status:": "Статус покупки:",
+    "Purchased product:": "Придбаний товар:"
     
 }
